[gd_scene load_steps=13 format=3 uid="uid://dcyaypcijxm2d"]

[ext_resource type="Script" path="res://scene/levels_menu.gd" id="1_xjqjd"]
[ext_resource type="Texture2D" uid="uid://fjltax3t7tjb" path="res://assets/Level screens/lvl1.png" id="2_4vqbc"]
[ext_resource type="Script" path="res://scene/Hide Box.gd" id="2_v8nt2"]
[ext_resource type="Script" path="res://scene/Crab's trouble.gd" id="3_fejn6"]
[ext_resource type="Script" path="res://scene/Bee Saber.gd" id="4_ccgto"]
[ext_resource type="Texture2D" uid="uid://b2wc8eekpjhre" path="res://assets/Ultimate Platformer Pack - Dec 2021/Preview.jpg" id="4_ub270"]
[ext_resource type="Texture2D" uid="uid://2qd56rkggr4t" path="res://assets/Level screens/lvl2.png" id="6_n28gm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iq3l8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qmjvb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swj03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ryy21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ngtaf"]

[node name="Levels_menu" type="Panel"]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xjqjd")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 0
offset_left = 550.0
offset_top = 250.0
offset_right = 1550.0
offset_bottom = 850.0
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 2
size_flags_horizontal = 0

[node name="Hide Box" type="Control" parent="ScrollContainer/HBoxContainer"]
modulate = Color(0.4, 0.4, 0.4, 1)
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
script = ExtResource("2_v8nt2")

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Hide Box"]
custom_minimum_size = Vector2(400, 600)
layout_direction = 1
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0
mouse_filter = 1
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/Hide Box"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
texture = ExtResource("2_4vqbc")
expand_mode = 4

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Hide Box"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_top = 400.0
offset_right = 400.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 40
text = "Hide Box"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hide_Box_Buton" type="Button" parent="ScrollContainer/HBoxContainer/Hide Box"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Crab\'s trouble" type="Control" parent="ScrollContainer/HBoxContainer"]
modulate = Color(0.686275, 0.686275, 0.686275, 1)
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
script = ExtResource("3_fejn6")

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Crab\'s trouble"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0
mouse_filter = 1
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Crab\'s trouble"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_top = 400.0
offset_right = 400.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 40
text = "Crab's Trouble
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/Crab\'s trouble"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
texture = ExtResource("4_ub270")
expand_mode = 4

[node name="Crab\'s_Trouble_Button" type="Button" parent="ScrollContainer/HBoxContainer/Crab\'s trouble"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer3" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Bee Saber" type="Control" parent="ScrollContainer/HBoxContainer"]
modulate = Color(0.881937, 0.881937, 0.881937, 1)
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
script = ExtResource("4_ccgto")

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/HBoxContainer/Bee Saber"]
custom_minimum_size = Vector2(400, 600)
layout_direction = 1
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0
mouse_filter = 1
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/HBoxContainer/Bee Saber"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 400.0
grow_horizontal = 2
texture = ExtResource("6_n28gm")
expand_mode = 4

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Bee Saber"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 0
offset_top = 400.0
offset_right = 400.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 40
text = "Bee Saber"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bee_Saber_Button" type="Button" parent="ScrollContainer/HBoxContainer/Bee Saber"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back_button" type="Button" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.784375
anchor_top = 0.85463
anchor_right = 0.940625
anchor_bottom = 0.936111
offset_left = -6.0
offset_top = -23.0
offset_right = -6.0
offset_bottom = -23.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.662745, 0.34902, 0.027451, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.541176, 0.14902, 1)
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_iq3l8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qmjvb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_swj03")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ryy21")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ngtaf")
action_mode = 0
keep_pressed_outside = true
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Hide Box/Hide_Box_Buton" to="ScrollContainer/HBoxContainer/Hide Box" method="_on_hide_box_buton_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Hide Box/Hide_Box_Buton" to="ScrollContainer/HBoxContainer/Hide Box" method="_on_hide_box_buton_mouse_exited"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Hide Box/Hide_Box_Buton" to="." method="_on_hide_box_buton_pressed"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Crab's trouble" to="." method="_on_level_box_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Crab's trouble" to="ScrollContainer/HBoxContainer/Crab's trouble" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Crab's trouble" to="." method="_on_level_box_mouse_exited"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Crab's trouble" to="ScrollContainer/HBoxContainer/Crab's trouble" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Crab's trouble/Crab's_Trouble_Button" to="ScrollContainer/HBoxContainer/Crab's trouble" method="_on_crabs_trouble_button_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Crab's trouble/Crab's_Trouble_Button" to="ScrollContainer/HBoxContainer/Crab's trouble" method="_on_crabs_trouble_button_mouse_exited"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Crab's trouble/Crab's_Trouble_Button" to="." method="_on_crabs_trouble_button_pressed"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Bee Saber" to="." method="_on_level_box_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Bee Saber" to="ScrollContainer/HBoxContainer/Bee Saber" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Bee Saber" to="." method="_on_level_box_mouse_exited"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Bee Saber" to="ScrollContainer/HBoxContainer/Bee Saber" method="_on_mouse_exited"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Bee Saber" to="ScrollContainer/HBoxContainer/Hide Box" method="_on_bee_saber_mouse_exited"]
[connection signal="mouse_entered" from="ScrollContainer/HBoxContainer/Bee Saber/Bee_Saber_Button" to="ScrollContainer/HBoxContainer/Bee Saber" method="_on_bee_saber_button_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/HBoxContainer/Bee Saber/Bee_Saber_Button" to="ScrollContainer/HBoxContainer/Bee Saber" method="_on_bee_saber_button_mouse_exited"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Bee Saber/Bee_Saber_Button" to="." method="_on_bee_saber_button_pressed"]
[connection signal="pressed" from="Back_button" to="." method="_on_back_button_pressed"]
